# rust_first_course

./: Cargo.toml
03_grammer/concepts/: Cargo.toml
03_grammer/concepts/src/: event.rs  fib.rs  func_exam.rs  pi.rs
03_grammer/scrape_url/: Cargo.toml
03_grammer/scrape_url/src/: main.rs
03_grammer/scrape_url_args/: Cargo.toml
03_grammer/scrape_url_args/src/: main.rs
03_grammer/scrape_url_with_error_handing/: Cargo.toml
03_grammer/scrape_url_with_error_handing/src/: main.rs
04_httpie/src/: main.rs
05_thumbor/: Cargo.toml
05_thumbor/src/: main.rs
05_thumbor/src/engine/: mod.rs  photon.rs
05_thumbor/src/pb/: mod.rs
06_queryer/: Cargo.toml
06_queryer/examples/: covid.rs  dialect.rs
06_queryer/src/: convert.rs  dialect.rs
07_ownership/: Cargo.toml
07_ownership/src/: check_copy.rs  ownership1.rs  ownership_error.rs
08_borrow/: Cargo.toml
08_borrow/src/: heap_reference_stack.rs  heap_reference_stack_outlive.rs  local_ref.rs  multiple_mut_ref.rs  multiple_mut_ref1.rs  ownership_reference.rs
09_multi_owner/: Cargo.toml
09_multi_owner/src/: dag.rs  dag_mut.rs  rc.rs  refcell.rs
10_lifetime/: Cargo.toml
10_lifetime/src/: first.rs  lifetime.rs  lifetime1.rs  strtok.rs
11_memory/: Cargo.toml
11_memory/src/: alignment.rs  raii.rs  size.rs
12_type_system/: Cargo.toml
12_type_system/src/: constant.rs  id.rs  reader.rs  writer.rs
